# reward_machines

./: pyproject.toml
reward_machines/envs/: __init__.py  get_reward_machine.py
reward_machines/envs/grids/: craft_world.py  grid_environment.py  office_world.py
reward_machines/reward_machines/: reward_machine.py  rm_environment.py
